# bitcoin-miner

./: CMakeLists.txt  readme.md
include/algorithms/: crypto.h
include/bitcoin/: block_header.h  message_header.h  network_type.h  opcodetype.h  outpoint.h  raw_transaction.h  script.h  tx_in.h  tx_in_coinbase.h  tx_out.h
include/bitcoin/messages/: message_block.h  message_getblocks.h  message_inv.h  message_ping.h  message_version.h  version_message.h
include/compatibility/: endianness.h
include/datatypes/: compact_size_uint.h
include/datatypes/inventory/: inventory.h  inventory_type.h
src/: main.cpp  main.cpp.old  main.cpp.old.old
src/algorithms/: crypto.cpp
src/app/: app.cpp
src/compatibility/: endianness.cpp
src/datatypes/: compact_size_uint.cpp
